--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo">
-        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Магазин милых штучек ручной работы для дома «Мишка»">
+      <a class="logo page-header__logo">
+        <img class="logo__image page-header__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Магазин «Мишка»">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -17,7 +17,7 @@
               <a href="catalog.html">Каталог товаров</a>
             </li>
             <li class="site-list__item">
-              <a href="custom-made-knitting.html">Вязание на заказ</a>
+              <a href="form.html">Вязание на заказ</a>
             </li>
           </ul>
           <ul class="main-nav__list user-list">
@@ -31,5 +31,117 @@
         </div>
       </nav>
     </header>
+    <main class="page-main">
+      <section class="products">
+        <h1 class="products-title">Милые штуки ручной работы для дома</h1>
+        <ul class="products-list">
+          <li class="products-list__item">
+            <a class="products-list__link products-list__link--interior" href="interior.html">Предметы интерьера</a>
+          </li>
+          <li class="products-list__item">
+            <a class="products-list__link products-list__link--toys" href="toys.html">Детские игрушки</a>
+          </li>
+        </ul>
+      </section>
+      <section class="promo">
+        <h2 class="visually-hidden">Популярный товар на этой неделе</h2>
+        <article class="product">
+          <h2 class="product__title">Вязаные корзинки</h2>
+          <span>Товар недели</span>
+          <p class="product__descr">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
+          <table class="product__parameters">
+            <tr class="product__parameters-row">
+              <td>Цвет:</td>
+              <td>«Тиффани»/серый</td>
+            </tr>
+            <tr class="product__parameters-row">
+              <td>Диаметр:</td>
+              <td>25 см</td>
+            </tr>
+            <tr class="product__parameters-row">
+              <td>Высота:</td>
+              <td>15 см</td>
+            </tr>
+          </table>
+          <div class="product__img-wrapper">
+            <img class="product__img" src="img/triple-set-mobile.jpg" width="260" height="315" alt="Вязаные корзинки">
+          </div>
+          <span class="product__price">Цена: 990 руб.</span>
+          <a class="btn product__btn" href="#">Заказать</a>
+        </article>
+      </section>
+      <section class="advantages">
+        <h2 class="advantages__title">Коротко о нас:</h2>
+        <ul class="advantages__list">
+          <li class="advantages__item advantages__item--eco">Экологически <br>чистые материалы</li>
+          <li class="advantages__item advantages__item--price">Скандинавский стиль <br>по российской цене</li>
+          <li class="advantages__item advantages__item--likes">Увеличивает лайки <br>на фотографиях</li>
+          <li class="advantages__item advantages__item--handmade">Связано вручную с <br>любовью и умилением</li>
+          <li class="advantages__item advantages__item--support">Поддержка отечественного <br>производителя</li>
+          <li class="advantages__item advantages__item--giftwrap">Поставляется в <br>подарочной упаковке</li>
+        </ul>
+      </section>
+      <section class="reviews">
+        <div class="reviews__wrapper slider">
+          <h2 class="reviews__title">Отзывы</h2>
+          <div class="reviews__list slider__list">
+            <blockquote class="reviews__item slider__item">
+              <p class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
+              <cite class="reviews__author">
+                <span class="author__name">Анастасия Красильникова</span>
+                <span class="author__nick">@misssssiskras</span>
+              </cite>
+            </blockquote>
+          </div>
+          <div class="reviews__toggles slider__toggles">
+            <button class="reviews__toggle reviews__toggle--prev slider__toggle" type="button">Предыдущий отзыв</button>
+            <button class="reviews__toggle reviews__toggle--next slider__toggle" type="button">Следующий отзыв</button>
+          </div>
+          <a class="btn reviews__btn" href="write-review.html">Написать</a>
+        </div>
+      </section>
+      <section class="contacts">
+        <h2 class="contacts__title">Контакты</h2>
+        <p class="contacts__info">
+          <span class="contacts__info-key">e-mail:</span>
+          <span class="contacts__info-value"><a class="contacts__email" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a></span>
+        </p>
+        <p class="contacts__info">
+          <span class="contacts__info-key">адрес:</span>
+          <span class="contacts__info-value">г. Санкт-Петербург, <br>ул. Большая Конюшенная, <br>д. 19/8, офис 101</span>
+        </p>
+        <div class="contacts__map">
+          <img src="img/map-mobile.jpg" width="320" height="457" alt="Адрес компании по адресу ул. Большая Конюшенная 19/8, офис 101, Санкт-Петербург">
+        </div>
+        <a href="write-us.html" class="btn contacts__btn">Напишите нам</a>
+      </section>
+      <footer class="page-footer">
+        <div class="page-footer__social social">
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--insta" href="https://wwww.instagram.com" target="_blank">
+                <span class="visually-hidden">Инстаграм</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--fb" href="https://www.facebook.com" target="_blank">
+                <span class="visually-hidden">Фейсбук</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--tw" href="https://twitter.com" target="_blank">
+                <span class="visually-hidden">Твиттер</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="page-footer__copyright copyright">
+          <b class="copyright__text">Разработано:</b>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
+            <span class="visually-hidden">HTML Academy</span>
+          </a>
+        </div>
+      </footer>
+    </main>
   </body>
 </html>
