--- a/form.html
+++ b/form.html
@@ -32,8 +32,10 @@
       </nav>
     </header>
     <main class="page-main">
-      <h1 class="form__title">Вязание на заказ</h1>
-      <p class="form__descr">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
+      <div class="page-main__wrapper">
+        <h1 class="page-main__title">Вязание на заказ</h1>
+      </div>
+      <p class="page-main__descr">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
       <form class="form" action="https://echo.htmlacademy.ru" method="post">
         <fieldset class="form__fieldset">
           <legend class="form__legend">Тип</legend>
