--- a/catalog.html
+++ b/catalog.html
@@ -48,7 +48,7 @@
                 </div>
               </div>
               <div class="product-card__wrapper">
-                <a class="product-card__link" href="bunny-bouncer.html"><img class="product-card__img" src="img/catalog/photo-1-mobile.jpg" width="260" height="195" alt="Зайчик-попрыгайчик"></a>
+                <a class="product-card__link" href="bunny-bouncer.html"><img class="product-card__img" src="img/photo-hare-mobile@1x.jpg" width="260" height="195" alt="Зайчик-попрыгайчик"></a>
               </div>
             </article>
           </li>
@@ -63,7 +63,7 @@
                 </div>
               </div>
               <div class="product-card__wrapper">
-                <a class="product-card__link" href="basket.html"><img class="product-card__img" src="img/catalog/photo-2-mobile.jpg" width="260" height="195" alt="Корзина для белья"></a>
+                <a class="product-card__link" href="basket.html"><img class="product-card__img" src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="Корзина для белья"></a>
               </div>
             </article>
           </li>
@@ -78,7 +78,7 @@
                 </div>
               </div>
               <div class="product-card__wrapper">
-                <a class="product-card__link" href="big-basket.html"><img class="product-card__img" src="img/catalog/photo-3-mobile.jpg" width="260" height="195" alt="Большая корзинка для игрушек"></a>
+                <a class="product-card__link" href="big-basket.html"><img class="product-card__img" src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Большая корзинка для игрушек"></a>
               </div>
             </article>
           </li>
@@ -88,9 +88,9 @@
         <div class="production__wrapper">
           <h2 class="production__title">Процесс производства</h2>
           <div class="production__video">
-            <video class="video" src="#" poster="img/catalog/video.jpg" preload="none" width="260" height="150"></video>
+            <video class="video" src="#" poster="img/video-mobile@1x.jpg" preload="none" width="260" height="150"></video>
             <div class="video__controls">
-              <button class="video__toggle" type="button"></button>
+              <button class="video__toggle" type="button">Воспроизвести видео</button>
             </div>
           </div>
           <p class="production__descr">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
