--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </tr>
           </table>
           <div class="product__img-wrapper">
-            <img class="product__img" src="img/triple-set-mobile.jpg" width="260" height="315" alt="Вязаные корзинки">
+            <img class="product__img" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Вязаные корзинки">
           </div>
           <span class="product__price">Цена: 990 руб.</span>
           <a class="btn product__btn" href="#">Заказать</a>
@@ -113,7 +113,7 @@
           </tr>
         </table>
         <div class="contacts__map map">
-          <img class="map__img" src="img/map-mobile.jpg" width="320" height="457" alt="Адрес компании по адресу ул. Большая Конюшенная 19/8, офис 101, Санкт-Петербург">
+          <img class="map__img" src="img/map-mobile@1x.jpg" width="322" height="457" alt="Адрес компании по адресу ул. Большая Конюшенная 19/8, офис 101, Санкт-Петербург">
         </div>
         <a class="btn contacts__btn" href="write-us.html">Напишите нам</a>
       </section>
