--- a/index.html
+++ b/index.html
@@ -3,51 +3,57 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Мишка</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="page-header">
-      <a class="logo page-header__logo">
-        <img class="logo__image page-header__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Магазин «Мишка»">
-      </a>
-      <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">Открыть меню</button>
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item">
-              <a class="site-list__link" href="catalog.html">Каталог товаров</a>
-            </li>
-            <li class="site-list__item">
-              <a class="site-list__link" href="form.html">Вязание на заказ</a>
-            </li>
-          </ul>
-          <ul class="main-nav__list user-list">
-            <li class="user-list__item">
-              <a class="user-list__link" href="search.html">Поиск по сайту</a>
-            </li>
-            <li class="user-list__item">
-              <a class="user-list__link" href="cart.html">Корзина: пока пуста</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+      <div class="page-header__container">
+        <a class="logo page-header__logo">
+          <img class="logo__image page-header__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Магазин «Мишка»">
+        </a>
+        <nav class="main-nav">
+          <button class="main-nav__toggle" type="button">Открыть меню</button>
+          <div class="main-nav__wrapper">
+            <ul class="main-nav__list site-list">
+              <li class="site-list__item">
+                <a class="site-list__link" href="catalog.html">Каталог товаров</a>
+              </li>
+              <li class="site-list__item">
+                <a class="site-list__link" href="form.html">Вязание на заказ</a>
+              </li>
+            </ul>
+            <ul class="main-nav__list user-list">
+              <li class="user-list__item">
+                <a class="user-list__link" href="search.html">Поиск по сайту</a>
+              </li>
+              <li class="user-list__item">
+                <a class="user-list__link" href="cart.html">Корзина: пока пуста</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
     </header>
     <main class="page-main">
-      <section class="products">
-        <h1 class="products__title">Милые штуки ручной работы для дома</h1>
-        <ul class="products__list">
-          <li class="products__item">
-            <a class="products__link products__link--interior" href="interior.html">Предметы интерьера</a>
+      <section class="promo">
+        <h1 class="promo__title">Милые штуки <br>ручной <br>работы для дома</h1>
+        <ul class="promo__list">
+          <li class="promo__item">
+            <a class="promo__link promo__link--interior" href="interior.html">Предметы <br>интерьера</a>
           </li>
-          <li class="products__item">
-            <a class="products__link products__link--toys" href="toys.html">Детские игрушки</a>
+          <li class="promo__item">
+            <a class="promo__link promo__link--toys" href="toys.html">Детские <br>игрушки</a>
           </li>
         </ul>
       </section>
-      <section class="promo">
-        <h2 class="promo__title visually-hidden">Популярный товар на этой неделе</h2>
-        <article class="product">
-          <h2 class="product__title">Вязаные корзинки</h2>
-          <span class="product__marker">Товар недели</span>
+      <section class="product-week">
+        <h2 class="product-week__title visually-hidden">Популярный товар на этой неделе</h2>
+        <div class="container">
+          <article class="product">
+          <div class="product__title-wrapper">
+            <h2 class="product__title">Вязаные корзинки</h2>
+            <span class="product__marker">Товар недели</span>
+          </div>
           <p class="product__descr">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
           <table class="product__table">
             <tr>
@@ -68,21 +74,25 @@
           </div>
           <span class="product__price">Цена: 990 руб.</span>
           <a class="btn product__btn" href="#">Заказать</a>
-        </article>
+          </article>
+        </div>
       </section>
       <section class="advantages">
-        <h2 class="advantages__title">Коротко о нас:</h2>
-        <ul class="advantages__list">
-          <li class="advantages__item advantages__item--eco">Экологически <br>чистые материалы</li>
-          <li class="advantages__item advantages__item--price">Скандинавский стиль <br>по российской цене</li>
-          <li class="advantages__item advantages__item--likes">Увеличивает лайки <br>на фотографиях</li>
-          <li class="advantages__item advantages__item--handmade">Связано вручную с <br>любовью и умилением</li>
-          <li class="advantages__item advantages__item--support">Поддержка отечественного <br>производителя</li>
-          <li class="advantages__item advantages__item--giftwrap">Поставляется в <br>подарочной упаковке</li>
-        </ul>
+        <div class="container">
+          <h2 class="advantages__title">Коротко о нас:</h2>
+          <ul class="advantages__list">
+            <li class="advantages__item advantages__item--eco">Экологически <br>чистые материалы</li>
+            <li class="advantages__item advantages__item--price">Скандинавский стиль <br>по российской цене</li>
+            <li class="advantages__item advantages__item--likes">Увеличивает лайки <br>на фотографиях</li>
+            <li class="advantages__item advantages__item--handmade">Связано вручную с <br>любовью и умилением</li>
+            <li class="advantages__item advantages__item--support">Поддержка отечественного <br>производителя</li>
+            <li class="advantages__item advantages__item--giftwrap">Поставляется в <br>подарочной упаковке</li>
+          </ul>
+        </div>
       </section>
       <section class="reviews">
-        <div class="reviews__wrapper slider">
+        <div class="container">
+          <div class="reviews__wrapper slider">
           <h2 class="reviews__title">Отзывы</h2>
           <div class="reviews__list slider__list">
             <blockquote class="reviews__item slider__item">
@@ -94,24 +104,27 @@
             </blockquote>
           </div>
           <div class="slider__toggles">
-            <button class="slider__arrow slider__arrow--prev" type="button">Предыдущий отзыв</button>
-            <button class="slider__arrow slider__arrow--next" type="button">Следующий отзыв</button>
+            <button class="slider__arrow slider__arrow--prev" type="button"><span class="visually-hidden">Предыдущий отзыв</span></button>
+            <button class="slider__arrow slider__arrow--next" type="button"><span class="visually-hidden">Следующий отзыв</span></button>
           </div>
           <a class="btn reviews__btn" href="write-review.html">Написать</a>
+          </div>
         </div>
       </section>
       <section class="contacts">
-        <h2 class="contacts__title">Контакты</h2>
-        <table class="contacts__table">
-          <tr>
-            <td class="contacts__table-parameter">e-mail:</td>
-            <td class="contacts__table-value"><a class="contacts__email" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a></td>
-          </tr>
-          <tr>
-            <td class="contacts__table-parameter">адрес:</td>
-            <td class="cantacts__table-value">г. Санкт-Петербург, <br>ул. Большая Конюшенная, <br>д. 19/8, офис 101</td>
-          </tr>
-        </table>
+        <div class="container">
+          <h2 class="contacts__title">Контакты</h2>
+          <table class="contacts__table">
+            <tr>
+              <td class="contacts__table-parameter">e-mail:</td>
+              <td class="contacts__table-value"><a class="contacts__email" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a></td>
+            </tr>
+            <tr>
+              <td class="contacts__table-parameter">адрес:</td>
+              <td class="contacts__table-value">г. Санкт-Петербург, <br>ул. Большая Конюшенная, <br>д. 19/8, офис 101</td>
+            </tr>
+          </table>
+        </div>
         <div class="contacts__map map">
           <img class="map__img" src="img/map-mobile@1x.jpg" width="322" height="457" alt="Адрес компании по адресу ул. Большая Конюшенная 19/8, офис 101, Санкт-Петербург">
         </div>
@@ -119,52 +132,51 @@
       </section>
     </main>
     <footer class="page-footer">
-      <div class="page-footer__social social">
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--insta" href="https://wwww.instagram.com" target="_blank">
-              <span class="visually-hidden">Инстаграм</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--fb" href="https://www.facebook.com" target="_blank">
-              <span class="visually-hidden">Фейсбук</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--tw" href="https://twitter.com" target="_blank">
-              <span class="visually-hidden">Твиттер</span>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="page-footer__copyright copyright">
-        <b class="copyright__text">Разработано:</b>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
-          <span class="visually-hidden">HTML Academy</span>
-        </a>
+      <div class="container">
+        <div class="page-footer__social social">
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--insta" href="https://wwww.instagram.com" target="_blank">
+                <span class="visually-hidden">Инстаграм</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--fb" href="https://www.facebook.com" target="_blank">
+                <span class="visually-hidden">Фейсбук</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--tw" href="https://twitter.com" target="_blank">
+                <span class="visually-hidden">Твиттер</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <a class="page-footer__copyright" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">Разработано<span class="visually-hidden">HTML Academy</span></a>
       </div>
     </footer>
     <section class="add-to-cart">
-      <h2 class="add-to-cart__title">Добавить в корзину</h2>
-      <form class="add-to-cart__form" action="https://echo.htmlacademy.ru" method="get">
+      <div class="container">
+        <h2 class="add-to-cart__title">Добавить <br>в корзину</h2>
+        <form class="add-to-cart__form" action="https://echo.htmlacademy.ru" method="get">
         <div class="add-to-cart__form-title">Выберите размер:</div>
         <div class="add-to-cart__field-wrapper">
-          <label class="add-to-cart__radio-wrapper">
-            <input type="radio" name="add-to-cart" value="s">
+          <label class="add-to-cart__radio-wrapper add-to-cart__radio-wrapper--active">
+            <input class="visually-hidden" type="radio" name="add-to-cart" value="s" checked>
             <span class="add-to-cart__radio-text">s</span>
           </label>
           <label class="add-to-cart__radio-wrapper">
-            <input type="radio" name="add-to-cart" value="m">
+            <input class="visually-hidden" type="radio" name="add-to-cart" value="m">
             <span class="add-to-cart__radio-text">m</span>
           </label>
           <label class="add-to-cart__radio-wrapper">
-            <input type="radio" name="add-to-cart" value="l">
+            <input class="visually-hidden" type="radio" name="add-to-cart" value="l">
             <span class="add-to-cart__radio-text">l</span>
           </label>
         </div>
         <input class="btn add-to-cart__btn" type="submit" value="Добавить">
-      </form>
+        </form>
+      </div>
     </section>
   </body>
 </html>
