Созданы отдельные препроцессорные файлы для блоков, заданы параметры текста и отступы для крупных сеточных блоков

--- a/index.html
+++ b/index.html
@@ -36,15 +36,17 @@
     </header>
     <main class="page-main">
       <section class="promo">
-        <h1 class="promo__title">Милые штуки <br>ручной <br>работы для дома</h1>
-        <ul class="promo__list">
+        <div class="promo__container">
+          <h1 class="promo__title">Милые штуки <br>ручной <br>работы для дома</h1>
+          <ul class="promo__list">
           <li class="promo__item">
             <a class="promo__link promo__link--interior" href="interior.html">Предметы <br>интерьера</a>
           </li>
           <li class="promo__item">
             <a class="promo__link promo__link--toys" href="toys.html">Детские <br>игрушки</a>
           </li>
-        </ul>
+          </ul>
+        </div>
       </section>
       <section class="product-week">
         <h2 class="product-week__title visually-hidden">Популярный товар на этой неделе</h2>
@@ -126,7 +128,7 @@
           </table>
         </div>
         <div class="contacts__map map">
-          <img class="map__img" src="img/map-mobile@1x.jpg" width="322" height="457" alt="Адрес компании по адресу ул. Большая Конюшенная 19/8, офис 101, Санкт-Петербург">
+          <img class="map__img" src="img/map-mobile@1x.jpg" width="320" height="457" alt="Адрес компании по адресу ул. Большая Конюшенная 19/8, офис 101, Санкт-Петербург">
         </div>
         <a class="btn contacts__btn" href="write-us.html">Напишите нам</a>
       </section>
