Добавлены стили для формы

--- a/form.html
+++ b/form.html
@@ -127,11 +127,9 @@
         </div>
         <div class="form__container">
           <fieldset class="field-message">
-          <legend class="field-message__title">Доп</legend>
-          <textarea class="field-message__textarea" name="message" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+            <label class="field-message__title">Доп</label>
+            <textarea class="field-message__textarea" name="message" placeholder="Опишите все ваши пожелания к заказу"></textarea>
           </fieldset>
-        </div>
-        <div class="form__container">
           <span class="form__required-message">*Поля обязательны для заполнения</span>
           <button class="btn form__btn" type="submit">Отправить заказ</button>
         </div>
