--- a/catalog.html
+++ b/catalog.html
@@ -148,7 +148,7 @@
             <span class="add-to-cart__radio-text">l</span>
           </label>
         </div>
-        <input class="btn add-to-cart__btn" type="submit" value="Добавить">
+        <input class="btn btn--green add-to-cart__btn" type="submit" value="Добавить">
         </form>
       </div>
     </section>
